--- a/app/index.html
+++ b/app/index.html
@@ -1,51 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animated Hello</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #282c36;
-            color: white;
-            font-family: Arial, sans-serif;
-            margin: 0;
-            text-align: center;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GCP Cloud HUB</title>
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      background: radial-gradient(circle at center, #0d1117, #000000 80%);
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      overflow: hidden;
+      color: #fff;
+    }
 
-        h1 {
-            font-size: 3em;
-            animation: fadeInScale 2s ease-in-out infinite alternate;
-        }
+    .logo {
+      width: 120px;
+      animation: pulse 3s infinite ease-in-out;
+      margin-bottom: 30px;
+      filter: drop-shadow(0 0 15px rgba(66,133,244,0.8));
+    }
 
-        /* Custom colors for each part */
-        .blue { color: #3498db; }
-        .green { color: #2ecc71; }
-        .yellow { color: #f1c40f; }
-        .red { color: #e74c3c; }
+    .title-container {
+      display: flex;
+      align-items: flex-end;
+      justify-content: center;
+      position: relative;
+    }
 
-        @keyframes fadeInScale {
-            0% {
-                opacity: 0.5;
-                transform: scale(0.8);
-            }
-            100% {
-                opacity: 1;
-                transform: scale(1);
-            }
-        }
-    </style>
+    h1 {
+      font-size: 2.6em;
+      text-transform: uppercase;
+      letter-spacing: 3px;
+      margin: 0 20px;
+      background: linear-gradient(90deg, #4285F4, #34A853, #FBBC05, #EA4335, #4285F4);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-size: 300% 300%;
+      animation: shine 6s linear infinite, float 4s ease-in-out infinite;
+      text-align: center;
+      position: relative;
+      z-index: 2;
+    }
+
+    h1::after {
+      content: "";
+      display: block;
+      margin: 15px auto 0;
+      width: 60%;
+      height: 3px;
+      background: linear-gradient(90deg, #4285F4, #34A853, #FBBC05, #EA4335);
+      border-radius: 3px;
+      animation: glowline 3s infinite alternate;
+    }
+
+    /* Bigger Party Poppers */
+    .popper {
+      font-size: 3.5em;   /* Bigger size */
+      position: relative;
+      margin-bottom: -10px; /* slightly overlap text baseline */
+      animation: bounce 2.5s infinite ease-in-out;
+    }
+
+    .popper.left {
+      transform: rotate(25deg); /* open toward Welcome */
+    }
+
+    .popper.right {
+      transform: scaleX(-1) rotate(25deg); /* flipped to open toward 0.4 */
+    }
+
+    @keyframes bounce {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-8px); }
+    }
+
+    /* Sparkles (confetti effect) */
+    .sparkle {
+      position: absolute;
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background: #fff;
+      opacity: 0;
+      animation: sparkleFly 2s infinite;
+    }
+
+    @keyframes sparkleFly {
+      0% {
+        transform: translate(0,0) scale(1);
+        opacity: 1;
+      }
+      100% {
+        transform: translate(var(--x), var(--y)) scale(0.5);
+        opacity: 0;
+      }
+    }
+
+    /* Logo animation */
+    @keyframes pulse {
+      0% { transform: scale(1); filter: drop-shadow(0 0 10px #4285F4); }
+      50% { transform: scale(1.1); filter: drop-shadow(0 0 25px #34A853); }
+      100% { transform: scale(1); filter: drop-shadow(0 0 15px #EA4335); }
+    }
+
+    @keyframes float {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
+    }
+
+    @keyframes shine {
+      0% { background-position: 0% 50%; }
+      100% { background-position: 200% 50%; }
+    }
+
+    @keyframes glowline {
+      from { opacity: 0.6; box-shadow: 0 0 10px #4285F4; }
+      to { opacity: 1; box-shadow: 0 0 25px #EA4335; }
+    }
+  </style>
 </head>
 <body>
-    <h1>
-        <span class="blue">Hello Everyone</span> 
-        <span class="green">Welcome to</span> 
-        <span class="yellow">GCP Cloud Hub</span> - 
-        <span class="red">Version_0.0</span>
-    </h1>
+  <!-- GCP Logo -->
+  <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/5/51/Google_Cloud_logo.svg" alt="Google Cloud Logo">
+
+  <!-- Title with party poppers -->
+  <div class="title-container">
+    <div class="popper left">🎉</div>
+    <h1>Welcome to GCP Cloud HUB - Version_0.1</h1>
+    <div class="popper right">🎉</div>
+
+    <!-- Sparkles from left popper -->
+    <div class="sparkle" style="left:0; bottom:-5px; --x:-120px; --y:-180px; background:#34A853;"></div>
+    <div class="sparkle" style="left:0; bottom:-5px; --x:-100px; --y:-150px; background:#4285F4; animation-delay:0.3s;"></div>
+    <div class="sparkle" style="left:0; bottom:-5px; --x:-80px; --y:-200px; background:#FBBC05; animation-delay:0.6s;"></div>
+
+    <!-- Sparkles from right popper -->
+    <div class="sparkle" style="right:0; bottom:-5px; --x:120px; --y:-180px; background:#EA4335;"></div>
+    <div class="sparkle" style="right:0; bottom:-5px; --x:100px; --y:-150px; background:#34A853; animation-delay:0.4s;"></div>
+    <div class="sparkle" style="right:0; bottom:-5px; --x:80px; --y:-200px; background:#4285F4; animation-delay:0.7s;"></div>
+  </div>
 </body>
 </html>
